Remove search from cards UI for now, add actual links to the side nav

--- a/cards.html
+++ b/cards.html
@@ -149,23 +149,23 @@
   <nav aria-label="Main navigation">
 		<div class="p-side-navigation__list">
 				<ul class="p-side-navigation__list">
+					<!-- <li class="p-side-navigation__item"> -->
+						<!-- <form class="p-search-box is-dark"> -->
+							<!-- <input aria-label="search" type="search" class="p-search-box__input" placeholder="Search Cards" name="search" autocomplete="on" required=""> -->
+							<!-- <button type="reset" class="p-search-box__reset"><i class="p-icon--close"></i></button> -->
+							<!-- <button type="submit" class="p-search-box__button"><i class="p-icon--search"></i></button> -->
+						<!-- </form> -->
+					<!-- </li> -->
 					<li class="p-side-navigation__item">
-						<form class="p-search-box is-dark">
-							<input aria-label="search" type="search" class="p-search-box__input" placeholder="Search Cards" name="search" autocomplete="on" required="">
-							<button type="reset" class="p-search-box__reset"><i class="p-icon--close"></i></button>
-							<button type="submit" class="p-search-box__button"><i class="p-icon--search"></i></button>
-						</form>
+						<a class="p-side-navigation__link" href="/admin/cards"><i class="p-icon--switcher-environments p-side-navigation__icon"></i>All Cards</a>
 					</li>
 					<li class="p-side-navigation__item">
-						<a class="p-side-navigation__link"><i class="p-icon--switcher-environments p-side-navigation__icon"></i>All Cards</a>
+						<a class="p-side-navigation__link" href="/admin/cardpacks"><i class="p-icon--containers p-side-navigation__icon"></i>Card Packs</a>
 					</li>
 					<li class="p-side-navigation__item">
-						<a class="p-side-navigation__link"><i class="p-icon--containers p-side-navigation__icon"></i>Card Packs</a>
-					</li>
+						<a class="p-side-navigation__link" href="/admin/infofield"><i class="p-icon--information p-side-navigation__icon"></i>Extra Info Fields</a>
 					<li class="p-side-navigation__item">
-						<a class="p-side-navigation__link"><i class="p-icon--information p-side-navigation__icon"></i>Extra Info Fields</a>
-					<li class="p-side-navigation__item">
-						<a class="p-side-navigation__link"><i class="p-icon--settings p-side-navigation__icon"></i>General Settings</a>
+						<a class="p-side-navigation__link" href="/admin/settings"><i class="p-icon--settings p-side-navigation__icon"></i>General Settings</a>
 					</li>
 				</ul>
 		</div>
