Add title to /admin/cards page

--- a/cards.html
+++ b/cards.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<title>drops? bot admin</title>
 	<!--script src="vanilla-framework-version-2.35.0.min.js"></script-->
 	<link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-2.35.0.min.css" />
 	<style>
