--- a/cards.html
+++ b/cards.html
@@ -168,6 +168,9 @@
 					<li class="p-side-navigation__item">
 						<a class="p-side-navigation__link" href="/admin/settings"><i class="p-icon--settings p-side-navigation__icon"></i>General Settings</a>
 					</li>
+					<li class="p-side-navigation__item">
+						<a class="p-side-navigation__link" href="<<>>BOT_ADD_URL<<>>"><i class="p-icon--plus p-side-navigation__icon"></i>Add to Server</a>
+					</li>
 				</ul>
 		</div>
 		</nav>
