--- a/cardpacks.html
+++ b/cardpacks.html
@@ -227,7 +227,7 @@
 		  var addTriggers = document.querySelectorAll('.cardpack-add-trigger');
 		  var cardPackContainer = document.getElementById('cardPackContainer');
 		  
-		  //<<>>DATA_LOC<<>>
+		  <<>>DATA_LOC<<>>
 		  
 		  /*var data = {
 			"My Hero Academia": 4,
