Fix cardpack removal and redirects

--- a/cardpacks.html
+++ b/cardpacks.html
@@ -257,7 +257,7 @@
 				button.setAttribute("class", "p-button--negative is-disabled");
 			}
 			var input = document.createElement("input");
-			input.setAttribute("name", "cardPack");
+			input.setAttribute("name", "packName");
 			input.setAttribute("type", "hidden");
 			input.setAttribute("value", cardPack);
 			card.appendChild(header1);
