Updating info fields should work

--- a/infofields.html
+++ b/infofields.html
@@ -233,7 +233,7 @@
 		<form class="p-form p-form--stacked" action="/admin/infofield/edit" method="post" enctype="multipart/form-data">
 			<fieldset>
 				<label for="editKeyName" class="is-required">Key Name</label>
-				<input class="p-form__input is-disabled" type="text" name="keyName" id="editKeyName" required="" disabled="" value="~NULL~" style="box-sizing: border-box;width: 100%;"></input>
+				<input class="p-form__input is-disabled" type="text" name="keyName" id="editKeyName" required="" readonly="" value="~NULL~" style="box-sizing: border-box;width: 100%;"></input>
 				<label for="editQuestionFormat" class="is-required">Question Format (display value)</label>
 				<input class="p-form__input" type="text" name="questionFormat" id="editQuestionFormat" value="~NULL~" style="box-sizing: border-box;width: 100%;"></input>
 				<button class="p-button--positive">Save changes</button>
