--- a/infofields.html
+++ b/infofields.html
@@ -164,12 +164,15 @@
 						<a class="p-side-navigation__link" href="/admin/cardpacks"><i class="p-icon--containers p-side-navigation__icon"></i>Card Packs</a>
 					</li>
 					<li class="p-side-navigation__item">
-						<a class="p-side-navigation__link" href="/admin/infofield"><i class="p-icon--information p-side-navigation__icon"></i>Extra Info Fields</a>
+						<a class="p-side-navigation__link" href="/admin/infofield"><i class="p-icon--information p-side-navigation__icon"></i>Info Fields</a>
 					<li class="p-side-navigation__item">
 						<a class="p-side-navigation__link" href="/admin/settings"><i class="p-icon--settings p-side-navigation__icon"></i>General Settings</a>
 					</li>
 					<li class="p-side-navigation__item">
 						<a class="p-side-navigation__link" href="<<>>BOT_ADD_URL<<>>"><i class="p-icon--plus p-side-navigation__icon"></i>Add to Server</a>
+					</li>
+					<li class="p-side-navigation__item">
+						<a class="p-side-navigation__link" href="/admin/account"><i class="p-icon--user p-side-navigation__icon"></i>My Account</a>
 					</li>
 				</ul>
 		</div>
