--- a/infofields.html
+++ b/infofields.html
@@ -185,7 +185,7 @@
 	<main class="l-main">
 	  <div class="p-strip--light" style="margin-bottom: 2.5rem;">
 		<div class="row">
-		  <p><h1>Card Info Fields</h1></p>
+		  <p><h1>Info Fields</h1></p>
 		</div>
 	  </div>
 	  <div class="row">
@@ -194,7 +194,7 @@
 				<center>
 					<i class="p-icon--plus"></i>
 					<h4>
-						Add a new card info field!
+						Add a new info field!
 					</h4>
 				</center>
 				</div>
@@ -206,7 +206,7 @@
     <aside id="add-aside" class="l-aside is-collapsed" id="aside-panel">
 	<div class="p-panel">
 	<div class="p-panel__header">
-	<h4 class="p-panel__title">New card info field</h4>
+	<h4 class="p-panel__title">New info field</h4>
 	<div class="p-panel__controls">
 	  <button id="add-aside-close" class="p-button--base u-no-margin--bottom has-icon"><i class="p-icon--close"></i></button>
 	</div>
@@ -218,7 +218,7 @@
 				<input class="p-form__input" type="text" name="keyName" id="keyName" required="" placeholder="hero_power" value="" style="box-sizing: border-box;width: 100%;"></input>
 				<label for="questionFormat" class="is-required">Field question format (display value)</label>
 				<input class="p-form__input" type="text" name="questionFormat" id="questionFormat" required="" placeholder="Hero power" value="" style="box-sizing: border-box;width: 100%;"></input>
-				<button class="p-button--positive">Add card info field</button>
+				<button class="p-button--positive">Add info field</button>
 			</fieldset>
 		</form>
 	</div>
