--- a/settings.html
+++ b/settings.html
@@ -169,7 +169,7 @@
 						<a class="p-side-navigation__link" href="/admin/settings"><i class="p-icon--settings p-side-navigation__icon"></i>General Settings</a>
 					</li>
 					<li class="p-side-navigation__item">
-						<a class="p-side-navigation__link" href="<<>>BOT_ADD_URL<<>>"><i class="p-icon--plus p-side-navigation__icon"></i>Add to Server</a>
+						<a class="p-side-navigation__link p-link--external" href="<<>>BOT_ADD_URL<<>>"><i class="p-icon--plus p-side-navigation__icon"></i>Add to Server</a>
 					</li>
 					<li class="p-side-navigation__item">
 						<a class="p-side-navigation__link" href="/admin/account"><i class="p-icon--user p-side-navigation__icon"></i>My Account</a>
