--- a/src/main/resources/cardpacks.html
+++ b/src/main/resources/cardpacks.html
@@ -123,7 +123,7 @@
     <div class="p-panel is-dark">
       <div class="p-panel__header">
         <a class="p-panel__logo" href="#" style="color:inherit;text-decoration:inherit;">
-          <img class="p-panel__logo-icon" src="https://drops.0k.rip/img/botprofile.png" alt="" width="24" height="24">
+          <img class="p-panel__logo-icon" src="/img/botprofile.png" alt="" width="24" height="24">
             <div class="p-panel__logo-name is-fading-when-collapsed u-vertically-center" style="height:1rem;margin-bottom:0.5rem;">drops? bot</div>
         </a>
         <div class="p-panel__controls">
@@ -137,7 +137,7 @@
       <div class="p-panel is-dark">
         <div class="p-panel__header is-sticky">
           <a class="p-panel__logo" href="#" style="color:inherit;text-decoration:inherit;">
-            <img class="p-panel__logo-icon u-vertically-center" src="https://drops.0k.rip/img/botprofile.png" alt="" width="24" height="24">
+            <img class="p-panel__logo-icon u-vertically-center" src="/img/botprofile.png" alt="" width="24" height="24">
             <div class="p-panel__logo-name is-fading-when-collapsed u-vertically-center" style="height:1rem;margin-bottom:0.5rem;">drops? bot</div>
           </a>
           <div class="p-panel__controls u-hide--large">
