--- a/src/main/resources/settings.html
+++ b/src/main/resources/settings.html
@@ -225,7 +225,7 @@
 	<div class="p-form-validation is-info">
 		<label for="botPrefix">Prefix</label>
 		<input class="p-form__input" type="text" id="botPrefix" name="botPrefix" value="<<>>botPrefix<<>>">
-		<p class="p-form-validation__message" role="info"><i class="p-icon--information"></i><span style="padding-left:0.5rem">Cannot contain spaces.</span></p>
+		<p class="p-form-validation__message" role="info"><i class="p-icon--information"></i><span style="padding-left:0.5rem">Not case sensitive.</span></p>
 	</div>
 	<label class="p-form__input" for="botClientId">Client Id</label>
 	<input class="p-form__input" type="text" id="botClientId" name="botClientId" value="<<>>botClientId<<>>">
