--- a/src/main/resources/linkme.html
+++ b/src/main/resources/linkme.html
@@ -1,14 +1,87 @@
 <head>
-	<title>drops? Bot - Link Account</title>
+	<title>drops? bot - Link Account</title>
+	<link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-2.35.0.min.css" />
 </head>
 <body>
-	Error: <<>>ERROR_MESSAGE<<>>
-	<br><br>
-	Account link request from <<>>DISCORD_USERNAME<<>>#<<>>DISCORD_HASH<<>> <img src="<<>>DISCORD_PROFILE_IMAGE<<>>"></img>
-	<a href="/linkme/accept?name=<<>>NAME<<>>">
-		<button>Accept</button>
-	</a>
-	<a href="/linkme/reject?name=<<>>NAME<<>>">
-		<button>Reject</button>
-	</a>
+	<div class="row" id="errorContainer">
+	<div class="col-2"></div>
+	<div class="col-8">
+	<div class="p-notification--negative">
+	  <div class="p-notification__content">
+		<h5 class="p-notification__title">Error</h5>
+		<p class="p-notification__message" id="error"><<>>ERROR_MESSAGE<<>></p>
+				<a href="/linkme/logout?name=<<>>NAME<<>>">
+					<button class="p-button--neutral" style="width:100%;">Log out</button>
+				</a>
+	  </div>
+	</div>
+	</div>
+	</div>
+	<div class="row">
+	<div class="col-2">
+	</div>
+    <div class="col-8">
+        <div class="p-card">
+		<h1>Account link request</h1>
+		<center>
+		<div class="row">
+		<div class="col-8">
+			<div class="p-card">
+				<div class="p-card__content">
+					<img class="p-card__image" alt="" src="<<>>DISCORD_PROFILE_IMAGE<<>>" style="width:6rem;"></image>
+					<p id="discord-username"><<>>DISCORD_USERNAME<<>>#<<>>DISCORD_HASH<<>></p>
+				</div>
+			</div>
+		</div>
+	</div>
+		<div class="row">
+		<div class="col-8">
+		<div class="p-card">
+		<div class="p-card-content">
+		<i class="p-icon--user"></i>
+		<p id="zkrauth-username"><<>>USERNAME<<>></p>
+		</div>
+		</div>
+		</div>
+		</div>
+		<a href="/linkme/accept?name=<<>>NAME<<>>" id="acceptLink">
+			<button id="acceptButton">Accept</button>
+		</a>
+		<a href="/linkme/reject?name=<<>>NAME<<>>" id="rejectLink">
+			<button id="rejectButton">Reject</button>
+		</a>
+		</center>
+	</div>
+	</div>
+	</div>
+	<script>
+	  function escapeHtml(unsafe) {
+		// see https://stackoverflow.com/a/6234804
+		return unsafe
+			 .replace(/&/g, "&amp;")
+			 .replace(/</g, "&lt;")
+			 .replace(/>/g, "&gt;")
+			 .replace(/"/g, "&quot;")
+			 .replace(/'/g, "&#039;");
+	  }
+	  var acceptLink = document.getElementById('acceptLink');
+	  var rejectLink = document.getElementById('rejectLink');
+	  var acceptButton = document.getElementById('acceptButton');
+	  var rejectButton = document.getElementById('rejectButton');
+	  acceptButton.onclick = function(){window.location.replace(acceptLink.href);}
+	  rejectButton.onclick = function(){window.location.replace(rejectLink.href);}
+	  acceptLink.replaceWith(...acceptLink.childNodes)
+	  rejectLink.replaceWith(...rejectLink.childNodes)
+	  var error = escapeHtml("<<>>ERROR_MESSAGE<<>>");
+	  if (error == "") {
+		document.getElementById('errorContainer').style.display = 'none';
+	  } else {
+		acceptButton.disabled = true
+		rejectButton.disabled = true
+	  }
+	  document.getElementById('error').innerHTML = error;
+	  document.getElementById('discord-username').innerHTML = escapeHtml("<<>>DISCORD_USERNAME<<>>#<<>>DISCORD_HASH<<>>")
+	  document.getElementById('zkrauth-username').innerHTML = escapeHtml("<<>>USERNAME<<>>")
+		
+	</script>
 </body>
