Linkme redirects somewhere, improved various linkme messages

--- a/src/main/resources/linkme.html
+++ b/src/main/resources/linkme.html
@@ -45,10 +45,10 @@
 		</div>
 		</div>
 		<a href="/linkme/accept?name=<<>>NAME<<>>" id="acceptLink">
-			<button id="acceptButton">Accept</button>
+			<button id="acceptButton" class="p-button--positive">Accept</button>
 		</a>
 		<a href="/linkme/reject?name=<<>>NAME<<>>" id="rejectLink">
-			<button id="rejectButton">Reject</button>
+			<button id="rejectButton" class="p-button--negative">Reject</button>
 		</a>
 		</center>
 	</div>
